--- a/templates/index.html
+++ b/templates/index.html
@@ -264,6 +264,7 @@
 
       <div class="landing-page">
         <h1>Breast Cancer Detection</h1>
+        <h2> Contact for Complete Project files : vatshayan007@gmail.com </h2>
         <p>Early detection saves lives. Get started by predicting breast cancer. Breast cancer is cancer that forms in the cells of the breasts.
 
           After skin cancer, breast cancer is the most common cancer diagnosed in women in the United States. Breast cancer can occur in both men and women, but it's far more common in women.
